# csl

./: readme.md
.github/workflows/: ci.yml
docs/: CSL.md
htdocs/: docs.html  examples.html  index.html
impl/core/: BuildWasm  BuildWasm.cmd  CMakeLists.txt  README.md
impl/core/docgen/: HtmlDocGen.cpp  HtmlDocGen.h
impl/core/driver/: Csl.cpp  Test.cpp
impl/core/langsvr/: CslLangSvr.cpp  CslLangSvr.h  FindPairs.h
impl/core/lexer/: CslLexer.cpp  CslLexer.h
impl/core/parser/: CslParser.cpp  CslParser.h
impl/core/shared/: Components.h  CslRepr2Csl.h  CslRepresentation.h  JsonIO.hpp  Shared.cpp  Token.h  Type.h  UniSock.hpp
impl/node/: CslLegacy.d.ts  CslWasm.d.ts  CslWasmBundle.d.ts  package.json  worker.ts
tests/: README.md
tests/invalid/: invalid_annotation_numeric_on_string.csl  invalid_annotation_string_on_number.csl  invalid_any_array_annotation.csl  invalid_any_type_annotation.csl  invalid_array_type_missing_bracket.csl  invalid_child_constraints_reference_parent.csl  invalid_constraints_missing_semicolon.csl  invalid_datetime_bad_month.csl  invalid_default_type_mismatch.csl  invalid_duplicate_constraints.csl  invalid_duration_bad_suffix.csl  invalid_function_call_missing_paren.csl  invalid_global_anno_in_local_context.csl  invalid_identifier_starts_with_digit.csl  invalid_raw_identifier_delimiter_length.csl  invalid_raw_string_delimiter_length.csl  invalid_regex_annotation_no_quotes.csl  invalid_requires_missing_key.csl  invalid_subset_props_on_primitive.csl  invalid_unclosed_backtick_identifier.csl  invalid_unclosed_string.csl  invalid_union_literal_with_type.csl  invalid_wildcard_constraint_outside_reference.csl  invalid_wildcard_missing_semicolon.csl
tests/valid/: valid_annotations_numeric.csl  valid_annotations_string_and_formats.csl  valid_any_types.csl  valid_arrays_tables.csl  valid_basic_schema.csl  valid_comments.csl  valid_complex_full_schema.csl  valid_composite_subset.csl  valid_constraints_core.csl  valid_constraints_scoping.csl  valid_datetime_duration.csl  valid_duration_shorthand_week.csl  valid_exists_and_ternary.csl  valid_global_annotation.csl  valid_identifiers_quoted.csl  valid_numbers_formats.csl  valid_optionality_defaults.csl  valid_special_numbers_with_signs.csl  valid_strings_escapes_raw.csl  valid_subset_object.csl  (+6 more)
(+28 files in other folders)
